--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=b4ZWr4oAAAAJ&hl=en&oi=ao"
-  email            : "ltangyubao21b@ict.ac.cn"
+  email            : "tangyubao21b@ict.ac.cn"
   researchgate     : 
   uri              :
   bitbucket        :
@@ -51,13 +51,13 @@ author:
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "https://twitter.com/ZheLiu96"
+  twitter          : "https://x.com/yubaotang2024"
   vine             :
   weibo            :
   xing             :
   youtube          : 
   wikipedia        :
-  wechat           : "lightntingtyb"
+  wechat           : "lightningtyb"
 
 
 # Reading Files
