--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Yubao Tang"
-description              : "Candidate Ph.D. at ICT, UCAS"
+description              : "Ph.D. Candidate at ICT, UCAS"
 repository               : "https://github.com/yubaotang11"
 google_scholar_stats_use_cdn : true
 
