--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   name             : "Yubao Tang"
   avatar           : "images/tangyubao.png"
   bio              : "University of Amsterdam"
-  location         : "Amsterdam, The Netherlands"
+  location         : "Amsterdam, Netherlands"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=b4ZWr4oAAAAJ&hl=en&oi=ao"
