--- a/_config.yml
+++ b/_config.yml
@@ -43,8 +43,8 @@ author:
   instagram        :
   impactstory      : # e.g., "https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : 
-  dblp             : 
+  linkedin         : "https://www.linkedin.com/in/yubao-tang-755968153/"
+  dblp             : "https://dblp.org/pid/299/6533"
   orcid            : "https://orcid.org/0009-0003-8010-3404"
   pinterest        :
   soundcloud       :
