--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ author:
   instagram        :
   impactstory      : # e.g., "https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/yubao-tang-755968153/"
+  linkedin         : "yubao-tang-755968153/"
   dblp             : "https://dblp.org/pid/299/6533"
   orcid            : "https://orcid.org/0009-0003-8010-3404"
   pinterest        :
@@ -51,7 +51,7 @@ author:
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "https://x.com/yubaotang2024"
+  twitter          : "yubaotang2024"
   vine             :
   weibo            :
   xing             :
