--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Yubao Tang"
-  avatar           : "images/tangyubao.png"
+  avatar           : "images/tyb-grass.png"
   bio              : "University of Amsterdam"
   location         : "Amsterdam, Netherlands"
   employer         :
